kubernetes/home/apps/networking/traefik-forward-auth/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  namespace: default
  # labels:
  #   app: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`oauth.shaklab.com`)
      kind: Rule
      services:
      - name: traefik-forward-auth
        port: 4181
  tls:
    secretName: shaklab-com-tls-certs
